2014-10-31  Charlie Zender  <zender@uci.edu>

	* Adjust regression tests to work with --cnk_min. Document --cnk_min.

2014-10-31  Henry Butowsky  <henryb@hush.com>
	* ncap_cst_mk() in ncap2_utl.cc checks that record dim is the first dim in list ONLY if nc3 file
	  and nc4 file. This also allows users to define vars with multiple record dims.

2014-10-30  Henry Butowsky  <henryb@hush.com>

	* Add hidden feature to defdim(): when dim_sz < 0 then dim is defined as unlimited

2014-10-22  Charlie Zender  <zender@uci.edu>

	* Replace NETCDF4_ROOT by NETCDF_ROOT in configure

2014-10-17  Charlie Zender  <zender@uci.edu>

	* Add --cnk_min to specify minimum size (default 8kB) in bytes of variable to chunk

2014-10-15  Charlie Zender  <zender@uci.edu>

	* Change configure.ac --enable-dap-netcdf to --enable-dap

	* Add cnk.cdl to test chunking algorithms

	* NCO 4.4.7 release procedure:
 	Changes since nco-4_4_6: -0->-1, rename bug, cnk xst, fxm
	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1

	* Add cnk_map=nco to assign to current NCO-recommended map

2014-10-13  Charlie Zender  <zender@uci.edu>

	* Always call chunking

	* Stubs for cnk_map = nc4 for default netCDF4 chunking (same as	unchunking for now?)

	* Change links to online discussion forums from, e.g., https://sf.net/projects/nco/forums/forum/9830 to
	https://sf.net/p/nco/discussion/9830 to eliminate new circular reference errors from sf webserver

2014-10-12  Charlie Zender  <zender@uci.edu>

	* Rationalize regression tests with new chunking defaults (xst, xst)

	* Ensure user-specified full chunking paths take precedence over relative paths

	* Simplify nco_cnk_sz_set_trv()

2014-10-10  Charlie Zender  <zender@uci.edu>

	* Fix ncrename regression tests

	* Build in_4.nc from in.nc (not in.cdl due to ncgen chunksize problems and bugs) for regression tests
