@@ -1,3 +1,8 @@
+2014-11-03  Charlie Zender  <zender@uci.edu>
+
+	* Fix long-time bug where nco_cpy_var_dfn_trv() sets dmn_cmn[].is_rec_var incorrectly for record dimension affected by
+	--fix_rec_dmn or --mk_rec_dmn invocation (always set incorrectly except on first variable affected)
+
 2014-10-31  Charlie Zender  <zender@uci.edu>
 
 	* Adjust regression tests to work with --cnk_min. Document --cnk_min.
